Add some missing Javadoc, add a path requireStructure method, add get* and require* methods for direct child nodes, improve setValue method, add putIfAbsent method, add stream and childStream, and add childIterator